--- a/package.json
+++ b/package.json
@@ -86,30 +86,6 @@
   },
   "dependencies": {
     "css-line-break": "2.0.1",
-    "text-segmentation": "^1.0.2",
-    "@turf/turf": "^6.2.0",
-    "antd": "^4.16.6",
-    "autoprefixer": "^9.8.6",
-    "axios": "^0.21.1",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-jest": "^27.0.6",
-    "babel-loader": "^7.1.5",
-    "babel-preset-react": "^6.24.1",
-    "babel-runtime": "^6.26.0",
-    "echarts": "^4.9.0",
-    "file-loader": "^4.2.0",
-    "html2canvas": "^1.1.4",
-    "lodash-es": "^4.17.21",
-    "mini-css-extract-plugin": "^0.11.0",
-    "monaco-editor-webpack-plugin": "^1.7.0",
-    "msr": "^1.3.4",
-    "path": "^0.12.7",
-    "postcss-loader": "^3.0.0",
-    "primeicons": "^1.0.0-beta.10",
-    "primereact": "^2.0.0-beta.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "turf": "^3.0.14"
+    "text-segmentation": "^1.0.2"
   }
 }
